--- a/styles/shows.css
+++ b/styles/shows.css
@@ -401,6 +401,8 @@ input:focus, textarea:focus, select:focus {
   color: white;
   background-color: #323232;
   border: 1px solid #AFAFAF;
+  -webkit-animation: fade 4s ease-in-out forwards;
+          animation: fade 4s ease-in-out forwards;
 }
 @media (min-width: 768px) {
   .notification {
@@ -411,6 +413,35 @@ input:focus, textarea:focus, select:focus {
   margin: 0rem;
 }
 
+@-webkit-keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  10% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  10% {
+    opacity: 1;
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 .hero {
   color: #FFFFFF;
   display: flex;
